2.0 introduction to yacc/parser_analysis.y
/*
 	original source: yacc - yet another compiler compiler
 */

%token DING DONG DELL
%%
rhyme : sound place;

sound: DING DONG;

place: DELL;
